# HackathonEcommerce

./: .gitignore  Dockerfile  HACKATON.md  README.md  index.html  manage.py  package-lock.json  pyproject.toml  requirements.txt
Backend/: README.md  pom.xml
Frontend/: index.html  package-lock.json  package.json  vercel.json  vite.config.js
Frontend/src/: App.jsx  index.css  main.jsx
Frontend/src/components/: CartComponents.jsx  FilterComponents.jsx  GreenButton.jsx  InputWithLabel.jsx  Logo.jsx  ProductComponents.jsx  ProtectedRoute.jsx  PublicRoute.jsx  WhiteButton.jsx
Frontend/src/context/: AuthProvider.jsx  ProductContext.jsx
Frontend/src/fonts/: fonts.module.css
Frontend/src/hooks/: useViewportHeight.jsx
Frontend/src/pages/: AdressPage.jsx  CartPage.jsx  CheckoutPage.jsx  (+6 more)
backend/: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
backend/api/: db.sqlite3  settings.py  urls.py
backend/api/api/: settings.py  urls.py
backend/api/shop/: urls.py  views.py
backend/app/: main.py  pix.py  security.py
backend/database/: database.db  schema.py
backend/models/: __init__.py  categorias.py  pedidos.py  produtos.py  usuarios.py
backend/orders/: urls.py
backend/orders/viewsets/: views.py
backend/products/: urls.py
backend/products/viewsets/: views.py
backend/routes/: __init__.py  admin.py  auth.py  categorias.py  pedidos.py  produtos.py  usuarios.py
carrinho/: apps.py
frontend/: components.json  index.html  package-lock.json  package.json  readme.md  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css  main.jsx
integwhatsap/: apps.py
pedidos/: admin.py  models.py  urls.py  views.py
pedidos/templates/: detalhe_pedido.html  lista_pedidos.html
pizzaria/: asgi.py  settings.py  urls.py  wsgi.py
produtos/: admin.py  apps.py  models.py  urls.py  views.py
produtos/migrations/: 0001_initial.py
src/: App.jsx
(+95 files in other folders)
